# tonic

./: Cargo.toml
codegen/: Cargo.toml
codegen/src/: main.rs
examples/: Cargo.toml
examples/src/authentication/: server.rs
examples/src/autoreload/: server.rs
examples/src/blocking/: server.rs
examples/src/cancellation/: server.rs
examples/src/compression/: server.rs
examples/src/dynamic/: server.rs
examples/src/dynamic_load_balance/: server.rs
examples/src/grpc-web/: server.rs
examples/src/h2c/: server.rs
examples/src/health/: server.rs
examples/src/helloworld/: server.rs
examples/src/hyper_warp/: server.rs
examples/src/hyper_warp_multiplex/: server.rs
examples/src/interceptor/: client.rs  server.rs
examples/src/json-codec/: server.rs
examples/src/load_balance/: server.rs
examples/src/mock/: mock.rs
examples/src/multiplex/: server.rs
examples/src/optional/: server.rs
examples/src/reflection/: server.rs
examples/src/richer-error/: server.rs  server_vec.rs
examples/src/routeguide/: server.rs
examples/src/streaming/: server.rs
examples/src/timeout/: server.rs
examples/src/tls/: server.rs
examples/src/tls_client_auth/: server.rs
examples/src/tls_rustls/: server.rs
examples/src/tower/: server.rs
examples/src/tracing/: server.rs
examples/src/uds/: server.rs
interop/: Cargo.toml
interop/src/: server.rs
tests/ambiguous_methods/: Cargo.toml
tests/compression/: Cargo.toml
tests/compression/src/: bidirectional_stream.rs  client_stream.rs  compressing_request.rs  compressing_response.rs  lib.rs  server_stream.rs
tests/current_thread/: Cargo.toml  build.rs
tests/current_thread/src/: lib.rs
tests/default_stubs/: Cargo.toml
tests/default_stubs/src/: lib.rs  test_defaults.rs
tests/disable_comments/: Cargo.toml
tests/extern_path/my_application/: Cargo.toml
tests/included_service/: Cargo.toml
tests/integration_tests/: Cargo.toml
tests/integration_tests/src/: lib.rs
tests/integration_tests/tests/: client_layer.rs  complex_tower_middleware.rs  connect_info.rs  connection.rs  extensions.rs  interceptor.rs  max_message_size.rs  origin.rs  routes_builder.rs  status.rs  streams.rs  timeout.rs  user_agent.rs
tests/root-crate-path/: Cargo.toml
tests/same_name/: Cargo.toml
tests/service_named_result/: Cargo.toml
tests/service_named_service/: Cargo.toml
tests/single_threaded/: Cargo.toml  build.rs
tests/single_threaded/src/: lib.rs
tests/stream_conflict/: Cargo.toml
tests/use_arc_self/: Cargo.toml
tests/use_arc_self/src/: lib.rs
tests/wellknown/: Cargo.toml
tests/wellknown-compiled/: Cargo.toml
tonic/: Cargo.toml
tonic-build/: Cargo.toml
tonic-build/src/: client.rs  code_gen.rs  prost.rs  server.rs
tonic-health/: Cargo.toml
tonic-health/src/: lib.rs  server.rs
tonic-health/src/generated_current_thread/: grpc_health_v1.rs
tonic-reflection/: Cargo.toml
tonic-reflection/src/: lib.rs  server.rs
tonic-reflection/src/generated_current_thread/: grpc_reflection_v1alpha.rs
tonic-reflection/tests/: server.rs
tonic-types/src/: lib.rs
tonic-web/: Cargo.toml
tonic-web/src/: call.rs  layer.rs  lib.rs  service.rs
tonic-web/tests/integration/: Cargo.toml
tonic/benches/: decode.rs
tonic/src/: body.rs  codegen.rs  executors.rs  lib.rs  status.rs  util.rs
tonic/src/client/: grpc.rs
tonic/src/codec/: decode.rs  encode.rs  mod.rs  prost.rs
tonic/src/server/: grpc.rs  mod.rs  service.rs
tonic/src/service/: interceptor.rs
(+17 files in other folders)
