[package]
authors = ["Yonathan Randolph <yonathan@gmail.com>"]
edition = "2021"
license = "MIT"
name = "ambiguous_methods"
publish = false
version = "0.1.0"

[features]
current-thread = [
    "tonic/current-thread",
    "tonic-build/current-thread",
]

[dependencies]
prost = "0.12"
tonic = {path = "../../tonic"}

[build-dependencies]
tonic-build = {path = "../../tonic-build"}
