[package]
authors = ["Inkyu Lee <gofiri@gmail.com>"]
edition = "2021"
license = "MIT"
name = "single_threaded"
publish = false
version = "0.1.0"

[dependencies]
tokio-stream = "0.1"
prost = "0.12"
tonic = {path = "../../tonic", features = ["gzip", "current-thread"]}

[build-dependencies]
tonic-build = {path = "../../tonic-build" }

[package.metadata.cargo-machete]
ignored = ["prost"]
