[package]
authors = ["Ben Sully <ben@bsull.io>"]
edition = "2021"
name = "stream_conflict"
publish = false
version = "0.1.0"
license = "MIT"

[features]
current-thread = []
default = []

[dependencies]
prost = "0.12"
tonic = { path = "../../tonic" }

[build-dependencies]
tonic-build = { path = "../../tonic-build" }
