[package]
authors = ["Lucio Franco <luciofranco14@gmail.com>"]
edition = "2021"
license = "MIT"
name = "wellknown-compiled"
publish = false
version = "0.1.0"

[features]
current-thread = [
    "tonic/current-thread",
    "tonic-build/current-thread",
]

[lib]
doctest = false

[dependencies]
prost = "0.12"
tonic = {path = "../../tonic"}

[build-dependencies]
prost-build = "0.12"
tonic-build = {path = "../../tonic-build"}
