[package]
authors = ["Lucio Franco <luciofranco14@gmail.com>"]
edition = "2021"
license = "MIT"
name = "wellknown"
publish = false
version = "0.1.0"

[features]
current-thread = [
    "tonic/current-thread",
    "tonic-build/current-thread",
]

[dependencies]
prost = "0.12"
prost-types = "0.12"
tonic = {path = "../../tonic"}

[build-dependencies]
tonic-build = {path = "../../tonic-build"}
