[package]
authors = ["Danny Hua <danny@42layers.io>"]
edition = "2021"
license = "MIT"
name = "my_application"
publish = false
version = "0.1.0"

[features]
current-thread = [
    "tonic/current-thread",
    "tonic-build/current-thread",
]
default = []

[dependencies]
prost = "0.12"
tonic = {path = "../../../tonic"}
uuid = {package = "uuid1", path = "../uuid"}

[build-dependencies]
tonic-build = {path = "../../../tonic-build"}
